--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,11 +1,19 @@
 .headerBackgroundStyling {
   background: url(../../assets/images/friskis.png) no-repeat;
   object-fit: cover;
-  height: 50vh;
-  position: relative;
+  height: 250px;
+  letter-spacing: 0.8rem;
+  font-weight: bold;
+  margin-top: -22px;
 }
 
 .headerH1Styling {
-  color: red;
-  text-align: center;
+  color: white;
+  line-height: 250px;
+}
+
+.logo {
+  position: absolute;
+  left: 15px;
+  top: 190px;
 }
