search button, gym list and cards have been structured on CSS

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
   background: url(../../assets/images/friskis.png) no-repeat;
   object-fit: cover;
   height: 250px;
-  letter-spacing: 0.8rem;
+  letter-spacing: 0.4rem;
   font-weight: bold;
   margin-top: -22px;
 }
@@ -10,6 +10,8 @@
 .headerH1Styling {
   color: white;
   line-height: 250px;
+  text-align: center;
+  text-shadow: black 1px 0 10px;
 }
 
 .logo {
