--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -2,8 +2,8 @@
   margin: 0;
   padding: 0;
   width: 360px;
-  /* border: 5px solid red; */
+  border: 5px solid black;
 }
 .bodyStyling {
-  text-align: left;
+  text-align: center;
 }
