changed buttons to links and added hover effects

--- a/src/components/GymList/GymCard/GymCard.module.css
+++ b/src/components/GymList/GymCard/GymCard.module.css
@@ -5,8 +5,17 @@
   font-size: 18px;
   letter-spacing: 0.3rem;
   text-align: center;
-  padding: 10px;
-  margin-bottom: 20px;
+  padding: 5px;
+  margin-bottom: 10px;
   border: solid 2px #dd022c;
   width: 100%;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: #dd022c;
+  color: white;
 }
