--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -1,9 +1,19 @@
 .phoneStyling {
   margin: 0;
   padding: 0;
-  width: 360px;
+  width: 375px;
   border: 5px solid black;
 }
 .bodyStyling {
   text-align: center;
+}
+
+.dateActivityScreen {
+  text-align: left;
+  color: #dd022c;
+  letter-spacing: 0.2em;
+  padding-left: 20px;
+  margin: 0;
+  margin-top: 4px;
+  font-size: 24px;
 }
