--- a/src/components/Buttons/LargeRoundedButton/LargeRoundedButton.module.css
+++ b/src/components/Buttons/LargeRoundedButton/LargeRoundedButton.module.css
@@ -6,6 +6,7 @@
   color: white;
   font-size: 16px;
   letter-spacing: 0.3rem;
+  text-align: center;
   font-weight: bold;
   box-sizing: border-box;
   display: inline-block;
