--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .headerBackgroundStyling {
-  background: url(../../assets/images/friskis.png) no-repeat;
-  object-fit: cover;
+  background: url(../../assets/images/test.jpg) no-repeat;
+  background-size: 1000px;
   height: 250px;
   letter-spacing: 0.4rem;
   font-weight: bold;
