changed picture and favicon

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,5 @@
 .headerBackgroundStyling {
-  background: url(../../assets/images/test.jpg) no-repeat;
+  background: url(../../assets/images/FriskisSvettis.jpg) no-repeat;
   background-size: 800px;
   height: 250px;
   letter-spacing: 0.4rem;
