--- a/src/components/Activities/Activities.module.css
+++ b/src/components/Activities/Activities.module.css
@@ -6,9 +6,9 @@ body {
   text-decoration: none;
   line-height: 0.6;
   text-align: left;
-  padding-left: 20px;
+  padding-left: 8vw;
   display: block;
-  width: 360px;
+  width: 100vw;
   height: auto;
   margin-bottom: 6vh;
   margin-top: 3vh;
@@ -22,14 +22,17 @@ body {
 }
 
 .activityHeading {
+  padding: 0;
   font-weight: bold;
   font-size: 36px;
-  margin: 4vh 0;
+  line-height: 1em;
+  margin: 0;
 }
 
 .activityInfo {
   font-size: 14px;
-  margin: 3vh 0;
+  font-weight: lighter;
+  margin: 3.2vh 0;
 }
 
 .infoContainer:hover {
@@ -40,5 +43,10 @@ body {
 h2,
 .infoParagraph {
   text-align: left;
-  padding: 0 20px;
+  padding: 0 8vw;
+  line-height: 1.5em;
+}
+
+.infoHeader {
+  margin-top: -3vh;
 }
