--- a/src/components/Activities/Activities.module.css
+++ b/src/components/Activities/Activities.module.css
@@ -1,14 +1,16 @@
 body {
   box-sizing: border-box;
+  max-width: 400px;
+  margin: auto;
+  border: 1px solid grey;
 }
 
 .infoContainer {
   text-decoration: none;
   line-height: 0.6;
   text-align: left;
-  padding-left: 8vw;
+  padding-left: 2vw;
   display: block;
-  width: 100vw;
   height: auto;
   margin-bottom: 6vh;
   margin-top: 3vh;
@@ -43,10 +45,11 @@ body {
 h2,
 .infoParagraph {
   text-align: left;
-  padding: 0 8vw;
+  padding: 0 2vw;
   line-height: 1.5em;
 }
 
 .infoHeader {
+  color: #dd022c;
   margin-top: -3vh;
 }
